full-moon/tests/roblox_cases/fail/parser/string_interpolation_empty/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/string_interpolation_empty
---
error[ast]: expected expression after `{`
  ┌─ source.lua:1:7
  │
1 │ print(`{}`)
  │       ^^
